--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,38 @@
 {
-  "name": "apollo-server",
+  "name": "nestjs-graphql-server",
   "private": true,
   "engines": {
     "node": ">=14.20.1"
   },
   "scripts": {
-    "start": "node index.ts"
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.6",
-    "@apollo/server": "^4.9.5",
+    "@nestjs/common": "10.2.10",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "10.2.10",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-express": "10.2.10",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
-    "mongoose": "^7.6.3",
-    "typescript": "5.0.4"
+    "mongoose": "^7.6.8",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "5.0.5",
+    "rxjs": "7.8.1",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "10.2.1",
+    "@nestjs/schematics": "10.0.3",
+    "@nestjs/testing": "10.2.10",
+    "@types/express": "4.17.21",
+    "@types/node": "20.8.7",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.3.3"
   }
 }
