--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,40 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest --dom",
+    "lint": "eslint --ext .js,.vue,.ts",
+    "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
     "nuxt": "^3.7.4",
+    "pinia": "^2.1.7",
+    "sass": "^1.70.0",
     "typescript": "5.0.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@nuxt/devtools": "latest",
-    "@nuxtjs/apollo": "^5.0.0-alpha.7",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@pinia/nuxt": "^0.5.1",
     "@types/node": "^20.8.5",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@vue/test-utils": "^2.4.4",
+    "@vueuse/core": "latest",
+    "@vueuse/nuxt": "latest",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.21.1",
+    "happy-dom": "^12.10.3",
+    "nuxt-vitest": "^0.11.5",
+    "prettier": "3.2.5",
+    "vite-plugin-vuetify": "^2.0.1",
+    "vite-svg-loader": "^5.1.0",
+    "vitest": "^0.33.0",
     "vue-router": "^4.2.5",
-    "graphql-tag": "2.12.6"
+    "vuetify": "^3.5.4"
   }
 }
