--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,13 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch"
+    "start:dev": "nest start --watch -- -b swc"
   },
   "dependencies": {
     "@nestjs/common": "10.2.10",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "10.2.10",
+    "@nestjs/graphql": "^12.0.11",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "10.2.10",
     "graphql": "^16.8.1",
