wip/dev: add MainPageProvider, add luxon library

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,7 +3,7 @@
   "extends": "./.nuxt/tsconfig.json",
   "root": true,
   "compilerOptions": {
-    "verbatimModuleSyntax": true,
-    "module": "CommonJS"
+    "verbatimModuleSyntax": false,
+    // "module": "CommonJS"
   }
 }
