--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@pinia/nuxt": "^0.5.1",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.8.5",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
@@ -36,6 +37,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "happy-dom": "^12.10.3",
+    "luxon": "^3.4.4",
     "nuxt-vitest": "^0.11.5",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
